--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,11 @@ body {
   font-size: 1.6rem;
   line-height: 1.5;
   background-color: var(--color-background);
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 h1,h3 {
   color: var(--color-heading);
@@ -25,7 +30,56 @@ h1,h3 {
 }
 h1 {
   font-size: 2.6rem;
+  padding: 30px 0;
 }
 h3 {
+  font-weight: bold;
+  letter-spacing: 1px;
   font-size: 1.8rem;
+}
+
+/*Birthday Container*/
+.birthdayContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  padding: 0 30px;
+  width: 450px;
+  background-color: white;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.4);
+}
+
+.birthdayContainer__btn {
+  border-radius: 5px ;
+  border: none;
+  color: white;
+  background-color: var(--color-background);
+  width: 100%;
+  margin: 30px 0;
+  padding: 10px 20px;
+  font-family: 'Mulish','Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 2.4rem;
+}
+
+/*Birthday List*/
+.birthdayList {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  gap: 20px;
+}
+
+/*Birthday Item*/
+.birthdayItem {
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  display: flex;
+  background-color: transparent;
+}
+.birhtdayItem__img {
+  object-fit: cover;
+  border-radius: 50%;
+  width: 75px;
+  height: 75px;
 }
