--- a/src/index.css
+++ b/src/index.css
@@ -37,3 +37,44 @@ h3 {
 p {
   color: rgb(97, 125, 152);
 }
+
+/*Image Container*/
+.imageContainer {
+  width: fit-content;
+  margin: 0 auto;
+  position: relative;
+}
+
+.imageContainer__img {
+  object-fit: cover;
+  border-radius: 50%;
+  width: 150px;
+  height: 150px;
+}
+
+.imageContainer__icon {
+  top: 0;
+  left: 0;
+  width: 4rem;
+  height: 4rem;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  border-radius: 50%;
+  color: white;
+  position: absolute;
+  font-size: 2rem;
+  background-color: var(--job-title-color);
+}
+
+.imageContainer::before {
+  top: -1rem;
+  right: -1rem;
+  z-index: -1;
+  border-radius: 50%;
+  position: absolute;
+  content: '';
+  width: 100%;
+  height: 100%;
+  background-color: var(--job-title-color);
+}
