--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
   --text-color: rgb(97, 125, 152);
   --background-color: rgb(241, 245, 248);
   --background-button-color: rgb(235, 247, 255);
+  --chervon-color: rgb(139, 203, 249);
 }
 
 *,*::after,*::before {
@@ -26,15 +27,20 @@ body {
 }
 /*h1 used for slider container's heading while h3 used for slider list*/
 h1,h3 {
+  color: var(--heading-color);
   font-weight: bold;
 }
 h1 {
   font-size: 4rem;
 }
 h3 {
+  margin-bottom: 4px;
   font-size: 1.6rem;
 }
 p {
+  text-align: center;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 400;
   color: rgb(97, 125, 152);
 }
 
@@ -43,9 +49,12 @@ p {
   width: fit-content;
   margin: 0 auto;
   position: relative;
+  margin-bottom: 24px;
 }
 
 .imageContainer__img {
+  z-index: 1;
+  position: relative;
   object-fit: cover;
   border-radius: 50%;
   width: 150px;
@@ -53,6 +62,7 @@ p {
 }
 
 .imageContainer__icon {
+  z-index: 2;
   top: 0;
   left: 0;
   width: 4rem;
@@ -70,11 +80,50 @@ p {
 .imageContainer::before {
   top: -1rem;
   right: -1rem;
-  z-index: -1;
   border-radius: 50%;
   position: absolute;
   content: '';
   width: 100%;
   height: 100%;
   background-color: var(--job-title-color);
+}
+
+/*Review Card*/
+.reviewCard {
+  padding: 24px 32px;
+  border-radius: 4px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 5px 15px 0px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(255, 255, 255);
+}
+.reviewCard__title {
+  margin-bottom: 8px;
+  color: var(--job-title-color);
+}
+.reviewCard__Chevbtn {
+  padding: 10px;
+  border: 0;
+  background-color: transparent;
+  font-size: 2rem;
+  color: var(--chervon-color);
+}
+.reviewCard__Chevbtn:hover {
+  cursor: pointer;
+  color: var(--job-title-color);
+}
+.reviewCard__btn {
+  color: var(--job-title-color);
+  background-color: var(--background-button-color);
+  border: 0;
+  border-radius: 4px;
+  padding: 4px 8px;
+}
+.reviewCard__btn:hover {
+  cursor: pointer;
+  background-color: var(--job-title-color);
+  color: var(--heading-color);
+  transition: all 1s;
 }
