--- a/src/index.css
+++ b/src/index.css
@@ -12,11 +12,43 @@ html {
   font-size: 62.5%;
 }
 body {
+  color: var(--text-color);
   background-color: var(--background-color);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 1.6rem;
   line-height: 1.5;
 }
 h1 {
+  color: var(--secondary-color);
   font-weight: 4rem;
 }
+h3 {
+  letter-spacing: 0.2rem;
+  font-size: 1.6rem;
+  color: var(--secondary-color);
+}
+h4 {
+  font-size: 1.6rem;
+  color: var(--primary-color);
+}
+
+/*Food Item*/
+.foodItem {
+  display: flex;
+  gap: 2rem;
+}
+.foodItem__img {
+  border: 4px var(--primary-color) solid;
+  border-radius: 4px;
+}
+.foodItem__content .heading {
+  border-bottom: 0.5px var(--secondary-color) dotted;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.foodItem__content .heading span{
+  color: var(--primary-color);
+}
+
+/**/
