--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,29 @@
+:root {
+  --primary-color: rgb(186, 93, 44);
+}
 *,::after,::before {
   margin: 0;
   box-sizing: border-box;
+}
+/*----Typography----*/
+html {
+  font-size: 62.5%;
+}
+body {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  line-height: 1.5;
+  font-size: 1.4rem;
+  background-color: rgb(241, 245, 248);
+}
+h1 {
+  font-size: 3.2rem;
+  font-weight: 500;
+  color: rgb(50, 77, 103);
+}
+h3 {
+  text-transform: capitalize;
+  font-weight: 700;
+}
+p {
+  line-height: 2;
 }
