--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ html {
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   line-height: 1.5;
-  font-size: 1.4rem;
+  font-size: 1.6rem;
   background-color: rgb(241, 245, 248);
 }
 h1 {
@@ -21,9 +21,42 @@ h1 {
   color: rgb(50, 77, 103);
 }
 h3 {
-  text-transform: capitalize;
+  font-size: 1.6rem;
+  color: var(--primary-color);
+  text-transform: uppercase;
+  letter-spacing: 0.16rem;
   font-weight: 700;
 }
+h4 {
+  text-transform: capitalize;
+  font-weight: 400;
+  font-size: 1.6rem;
+  color: rgb(50, 77, 103);
+}
 p {
+  color: rgb(97, 125, 152);
   line-height: 2;
+}
+/*----Review Card----*/
+.reviewCard {
+  text-align: center;
+}
+.reviewCard__img {
+  display: block;
+  width: 100%;
+  margin: 0 auto;
+  border: 4px solid hsl(210, 31%, 80%);
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+  margin-bottom: 1.6rem;
+} 
+.reviewCard .icon {
+  margin-top: 1.6rem;
+  font-size: 4.8rem;
+  color: var(--primary-color);
+}
+.reviewCard .description {
+  margin-top: 3.2rem;
 }
