--- a/src/index.css
+++ b/src/index.css
@@ -14,9 +14,13 @@ body {
   line-height: 1.5;
   font-size: 1.6rem;
   background-color: rgb(241, 245, 248);
+  display: grid;
+  place-items: center;
+  width: 100%;
+  height: 100vh;
 }
 h1 {
-  font-size: 3.2rem;
+  font-size: 4rem;
   font-weight: 500;
   color: rgb(50, 77, 103);
 }
@@ -65,13 +69,14 @@ p {
 .reviewCard .description {
   margin-top: 3.2rem;
 }
-/*----Review----*/
+/*----ReviewSlider----*/
 .review {
   overflow: hidden;
   position: relative;
   width: 80vw;
   margin: 0 auto;
   height: 450px;
+  margin-top: 6.4rem;
 }
 .review .reviewCard {
   height: 100%;
@@ -113,4 +118,14 @@ p {
 }
 .review .btn:hover {
   background-color: var(--primary-color);
+}
+/*----ReviewSliderContainer----*/
+.reviewSliderContainer {
+  text-align: center;
+}
+.reviewSliderContainer span{
+  color: var(--primary-color);
+}
+.reviewSliderContainer h1{
+  margin-bottom: 1.2rem;
 }
