--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@ html {
   font-size: 62.5%;
 }
 body {
+  text-align: center;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   background-color: rgb(241, 245, 248);
   line-height: 1.5;
@@ -13,11 +14,13 @@ body {
   color: rgb(97, 125, 152);
 }
 h1 {
+  text-transform: uppercase;
+  letter-spacing: 1.6px;
   color: rgb(6, 50, 81);
   font-size: 2.8rem;
   font-weight: 700;
 }
-h3 {
+label {
   font-weight: 400;
   color: rgb(6, 50, 81);
   font-size: 2rem;
@@ -25,6 +28,32 @@ h3 {
 }
 button {
   color: #333;
-  background-color: rgb(165, 213, 248);
+  background-color: rgb(73, 166, 233);
   text-transform: uppercase;
+}
+/*----LoremGenerator----*/
+.loremGenerator {
+
+}
+.loremGenerator__form {
+  display: flex;
+  justify-content: center;
+  margin-top: 3.2rem;
+  margin-bottom: 6.4rem;
+}
+.loremGenerator__form input{
+  border: 0;
+  border-radius: 5px;
+  margin-right: 2rem;
+}
+.loremGenerator__form button{
+  cursor: pointer;
+  letter-spacing: 0.16rem;
+  padding: 8px 10px;
+  border: 0;
+  border-radius: 6px;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 1px 3px 0px;
+}
+.loremGenerator__para {
+  margin-bottom: 2rem;
 }
