--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,30 @@ input {
   color: #888;
   font-weight: 400;
 }
+
+/*Form*/
+.form {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding-left: 3.2rem;
+  height: 100px;
+}
+.form__label {
+  margin-right: 3.2rem;
+}
+.form__input {
+  padding: 8px 15px;
+  border-color: transparent;
+  border-radius: 5px;
+}
+.form__btn {
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+  padding: 8px 16px;
+  font-weight: 300;
+  color: #fff;
+  border-color: transparent;
+  background-color: hsl(205, 78%, 60%);
+  font-size: 1.92rem;
+}
