--- a/src/index.css
+++ b/src/index.css
@@ -29,3 +29,25 @@ input {
 p {
   letter-spacing: 0.2rem;
 }
+/*----BudForm----*/
+.budForm {
+  transition: all 0.5s linear;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.budForm__input {
+  flex: 1 0 auto;
+  border-color: transparent;
+  padding: 4px 16px;
+  background-color: rgb(241, 245, 248);
+}
+.budForm__btn {
+  flex: 0 0 8rem;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+  background-color: rgb(165, 213, 248);
+  padding: 4px 4px;
+  border: transparent;
+  letter-spacing: 2px;
+}
