--- a/src/index.css
+++ b/src/index.css
@@ -47,12 +47,13 @@ h1 {
 .navBar__links {
   justify-content: flex-start;
   align-items: center;
-  gap: 3rem;
   list-style: none;
   display: flex;
   flex: 1;
 }
 .navBar__links a {
+  margin-right: 3rem;
+  transition: all 0.2s ease;
   text-transform: capitalize;
   color: var(--fill-color);
   display: block;
@@ -71,9 +72,13 @@ h1 {
 }
 /*----SubMenu----*/
 .subMenu {
+  color: var(--background-color-2);
+  padding: 100px;
+  border-radius: 4px;
+  transition: all 1s ease;
   height: fit-content;
   position: fixed;
-  background-color: yellow;
+  background-color: var(--border-color);
   transform: translateX(-50%);
 }
 .subMenu--collapsed {
