--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
 :root {
   --primary-color: #fff;
   --secondary-color: #c1dff0;
-  --secondary-color-2: #3587A4; 
-  --accent-color: #ccc;
+  --secondary-color-2: #3587A4;
+  --accent-color: rgb(40, 44, 53);
 }
 *,*::after,*::before {
   box-sizing: border-box;
@@ -15,7 +15,7 @@ html {
 body{
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   color: var(--secondary-color-2);
-  line-height: 1.5;
+  line-height: 1.8;
   letter-spacing: 2px;
   font-size: 1.8rem;
   background-color: var(--primary-color);
@@ -24,5 +24,23 @@ h1 {
   font-size: 3rem;
 }
 h3 {
+  color: var(--secondary-color-2);
+  text-transform: capitalize;
+  margin-bottom: 1rem;
   font-size: 2.4rem;
+}
+p {
+  color: var(--accent-color);
+  font-size: 1.5rem;
+  font-style: italic;
+}
+/*----InfoCard----*/
+.infoCard {
+  padding: 2rem 3rem 3rem 10rem ;
+  max-width: fit-content;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;  
+  align-items: start;
 }
