--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,19 @@
   box-sizing: border-box;
   margin: 0;
 }
+/*----Color mode----*/
+.light-theme {
+  --primary-color: #fff;
+  --secondary-color: #c1dff0;
+  --secondary-color-2: #3587A4;
+  --accent-color: rgb(40, 44, 53);
+}
+.dark-theme {
+  --primary-color: ##282c35;
+  --secondary-color: #3587A4;
+  --secondary-color-2: #c1dff0;
+  --accent-color: #fff;
+}
 /*----Typography----*/
 html {
   font-size: 62.5%;
@@ -38,7 +51,6 @@ p {
 .infoCard {
   padding: 2rem 3rem 3rem 10rem ;
   max-width: fit-content;
-  margin: 0 auto;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;  
@@ -66,4 +78,12 @@ p {
   background-color: var(--secondary-color-2);
   padding: 7px 20px;
   border-radius: 5px;
+}
+.darkMode__content {
+  width: fit-content  ;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  margin: 0 auto;
 }
